# plebis-engine

./: .gitignore  Cargo.toml
src/: main.rs
src/services/: mod.rs  report.rs  search.rs
src/types/: es_envelope.rs  mod.rs  report.rs  results_payload.rs
static/: index.html  logo2.ai  results.css  sensus.ai
static/assets/: manifest.json  r.sh
static/assets/css/: basics.css  cactus.css  gist.css  normalize.css
static/assets/js/: html5shiv-printshiv.js  respond.js
templates/: report.hbs  results.hbs  results2.hbs
