[package]
name = "plebis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
elasticsearch = "7.14.0-alpha.1"
handlebars = "4.2.2"
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = true

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = true
